--- a/Reg/signin.html
+++ b/Reg/signin.html
@@ -5,17 +5,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SignIn</title>
 </head>
+<style>
+    body{
+        height: 350px;
+        width: 550px;
+        margin-top: 200px;
+        margin-left: 250px;
+        margin-right: 250px;
+        margin-bottom: 200px;
+       
+    }
+    #sig{
+        background-color: antiquewhite;
+    }
+    #in{
+        background-color: blanchedalmond;
+    }
+    input[type=submit]{
+        background-color: black;
+        color: red;
+        font-family: 'Times New Roman', Times, serif;
+        font-size: 150%;
+        
+    }
+</style>
 <body>
-    <fieldset>
-        <legend>Signin</legend>
+    <center>
+        <div id="sig">
+        <h2>SignIn Form</h2></div>
+        <div id="in">
         <form action="handle.php" method=post>
             <table>
                 <tr><td>Email: </td><td><input type="text"name="email" required></td></tr>
                 <tr><td>Password: </td><td><input type="password"name="password" required></td></tr>
                 <tr><td>Don't have account</td><td><a href="registration.php"> Create one?</a></td></tr>
+                <tr><td><input type="checkbox" name="Remember" value="a"> Remember Me</td></tr>
                 <tr><td><input type="submit" name="submit" value="SignIn"></td></tr>
             </table>
         </form>
-    </fieldset>
+    </div>
+</center>
 </body>
 </html>
