--- a/Reg/search.html
+++ b/Reg/search.html
@@ -6,25 +6,21 @@
     </head>
     <body>
         <input type="text" name="Search" id="live" onkeypress="search()">
-
         <h2 id="message"></h2>
-        <h2 id="message"></h2>
-        <h2 id="message"></h2>
+        <br>
+        <br>
     </body>
     <script>
         function search(){
             let username=document.getElementById('live').value;
-           
-            let data=JSON.stringify(username);
             let xhttp=new XMLHttpRequest();
             xhttp.open('post','search.php',true);
             xhttp.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
-            xhttp.send('name='+data);
+            xhttp.send('name='+username);
             xhttp.onreadystatechange=function(){
                 if(this.readyState == 4 && this.status == 200){
-                    let user = JSON.parse(this.responseText);
-                    document.getElementById('message').innerHTML=user.fullname;
-
+                    document.getElementById('message').innerText=this.responseText;
+                    
                 }
             }
         }
