--- a/Reg/search.html
+++ b/Reg/search.html
@@ -5,14 +5,14 @@
         </title>
     </head>
     <body>
-        <input type="text" name="Search" id="live" onkeypress="search()">
+        <input type="text" name="Search" id="live" onkeypress="search(this.value)">
         <h2 id="message"></h2>
         <br>
         <br>
     </body>
     <script>
-        function search(){
-            let username=document.getElementById('live').value;
+        function search(str){
+            /*let username=document.getElementById('live').value;
             let xhttp=new XMLHttpRequest();
             xhttp.open('post','search.php',true);
             xhttp.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
@@ -22,6 +22,17 @@
                     document.getElementById('message').innerText=this.responseText;
                     
                 }
+            }*/
+
+            if(str==""){
+                return;
+            }
+            let xhttp=new XMLHttpRequest();
+            xhttp.open('post','search.php',true);
+            xhttp.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
+            xhttp.send('name='+str);
+            xhttp.onload=function(){
+                document.getElementById('message').innerHTML=this.responseText;
             }
         }
     </script>
