--- a/Reg/search.html
+++ b/Reg/search.html
@@ -5,7 +5,7 @@
         </title>
     </head>
     <body>
-        <input type="text" name="Search" id="live" onkeypress="search(this.value)">
+        <input type="text" name="Search" id="live" onkeyup="search(this.value)">
         <h2 id="message"></h2>
         <br>
         <br>
