--- a/Reg/search.html
+++ b/Reg/search.html
@@ -25,6 +25,7 @@
             }*/
 
             if(str==""){
+                document.getElementById('message').innerHTML="";
                 return;
             }
             let xhttp=new XMLHttpRequest();
