--- a/Reg/signin.html
+++ b/Reg/signin.html
@@ -6,15 +6,7 @@
     <title>SignIn</title>
 </head>
 <style>
-    body{
-        height: 350px;
-        width: 550px;
-        margin-top: 200px;
-        margin-left: 250px;
-        margin-right: 250px;
-        margin-bottom: 200px;
-       
-    }
+  
     #sig{
         background-color: antiquewhite;
     }
@@ -36,11 +28,11 @@
 </style>
 <body>
     <center>
-        <div id="sig">
+       
         <h2>SignIn Form</h2></div>
         <div id="in">
         <form action="handle.php" method=post>
-            <table>
+            <table align="center">
                 <tr><td>Email: </td><td><input type="text"name="email" required></td></tr>
                 <tr><td>Password: </td><td><input type="password"name="password" required></td></tr>
                 <tr><td>Don't have account</td><td><a href="registration.php"> Create one?</a></td></tr>
@@ -48,7 +40,7 @@
                 <tr><td><input  type="submit" name="submit" value="SignIn"></td></tr>
             </table>
         </form>
-    </div>
+   
 </center>
 </body>
 </html>
