--- a/Reg/userinfo.html
+++ b/Reg/userinfo.html
@@ -6,7 +6,7 @@
         <script src="script.js"></script>
     </head>
     <body>
-        <input type="text" name="Search" id="live" onkeyup="search(this.value)" placeholder="Search by email">
+        <input type="text" name="Search" id="live" onkeyup="searchuser(this.value)" placeholder="Search by email">
         <h2 id="message"></h2>
     </body>
 </html>
